src/blocks/navbar.css
.navbar {
  transition: all 0.6s ease-in;
  align-content: center;
  display: flex;
  flex-direction: row;
  position: sticky;
  top: 0px;
  z-index: 3;
}

.navbar__links {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
  background-color: #fff;
  width: 100%;
}

.navbar__link-calc {
  width: 104px;
}

.navbar__link-wall {
  width: 157px;
}

.navbar__link-factory {
  width: 205px;
}

.navbar__link-recycle {
  width: 177px;
}

.navbar__link-caption {
  margin-top: 12px;
  margin-bottom: 0;
}

.navbar__meeting-btn {
  margin-right: 0px;
  align-self: flex-end;
}

.navbar__meeting-btn:hover {
  cursor: pointer;
  background: #D2390E;
}

